--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "pg": "^8.4.1"
   }
 }
